added generate quote function

--- a/RandomQuotes/index.html
+++ b/RandomQuotes/index.html
@@ -10,9 +10,12 @@
 <body>
   <section class="container">
     <div class="row">
-      <button id="btn">Generate Quote</button>
-      <p><span>"</span>quote goes here</p>
-      <h1>Author</h1>
+      <div class="content">
+        <button id="btn">Generate Quote</button>
+        <p class="quote"><span>"</span>quote goes here</p>
+        <h1 class="author">Author</h1>
+
+      </div>
 
     </div>
   </section>
