added html card structure

--- a/profile-card-component-main/index.html
+++ b/profile-card-component-main/index.html
@@ -13,20 +13,38 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="_base.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  Victor Crest
-  26
-  London
+  <div class="card">
+    <img src="/images/image-victor.jpg" alt="image of Victor">
+    <div class="user">
+      <p class="name">Victor Crest</p>
+      <p class="age">26</p>
+    </div>
+    <p class="location">London</p>
 
-  80K
-  Followers
+    
+    <div class="social">
+      <div>
+        <p class="stats">80k</p>
+        <p class="stat-subtitle">Followers</p>
+      </div>
+      <div>
+        <p class="stats">803k</p>
+        <p class="stat-subtitle">Likes</p>
+      </div>
+      <div>
+        <p class="stats">1.4k</p>
+        <p class="stat-subtitle">Photos</p>
+      </div>
+  
+    </div>
+  </div>
+  
 
-  803K
-  Likes
 
-  1.4K
-  Photos
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
