added final css code to card

--- a/profile-card-component-main/index.html
+++ b/profile-card-component-main/index.html
@@ -50,10 +50,12 @@
   </section>
   
 
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ricky Nguyen</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Ricky Nguyen</a>.
+    </div>
+    
+  </footer>
 </body>
 </html>
