--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -13,6 +13,8 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="_base.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
