--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -17,22 +17,39 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <section class="container">
+    <div class="container-image">
+      <img src="/images/drawers.jpg" alt="picutre of drawers" class="img">
+    </div>
+    <div class="container-content">
+      <div>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
+        <h2 class="headline"> Shift the overall look and feel by adding these wonderful touches to furniture in your home</h2>
 
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
+        <p class="content">Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete.</p>
 
-  Michelle Appleton
-  28 Jun 2020
+      </div>
+      <div class="container-author">
+        <img src="/images/avatar-michelle.jpg" alt="profile picture of Michelle" class="headshot-author">
+        <div class="info-author">
+          <p class="name-author">Michelle Appleton</p>
+          <p class="date-author">28 Jun 2020</p>
+        </div>
+        <div class="btn-author">
+          <a href="#"><img src="/images/icon-share.svg" alt="share button"></a>
+        </div>
+      </div>
 
-  Share
+    </div>
+  </section>
+ 
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+
+  </footer>
 </body>
 </html>
