--- a/article-preview-component-master/index.html
+++ b/article-preview-component-master/index.html
@@ -17,10 +17,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section class="container">
-    <div class="container-image">
-      <img src="/images/drawers.jpg" alt="picutre of drawers" class="img">
-    </div>
+  <section class="container flex-center">
+    <div class="container-image"></div>
     <div class="container-content">
       <div>
 
@@ -30,10 +28,12 @@
 
       </div>
       <div class="container-author">
-        <img src="/images/avatar-michelle.jpg" alt="profile picture of Michelle" class="headshot-author">
-        <div class="info-author">
-          <p class="name-author">Michelle Appleton</p>
-          <p class="date-author">28 Jun 2020</p>
+        <div class="author">
+          <img src="/images/avatar-michelle.jpg" alt="profile picture of Michelle" class="headshot-author">
+          <div class="info-author">
+            <p class="name-author">Michelle Appleton</p>
+            <p class="date-author">28 Jun 2020</p>
+          </div>
         </div>
         <div class="btn-author">
           <a href="#"><img src="/images/icon-share.svg" alt="share button"></a>
