--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <section class="grid-container">
-    <div class="card">
+    <div class="card card-1">
       <div class="client-container">
         <img src="/images/image-daniel.jpg" alt="headshot of Daniel">
         <div class="client-detail">
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card card-2">
       <div class="client-container">
         <img src="/images/image-jonathan.jpg" alt="headshot of Jonathon">
         <div class="client-detail">
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card card-3">
       <div class="client-container">
         <img src="/images/image-jeanette.jpg" alt="headshot of jeanette">
         <div class="client-detail">
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card card-4">
       <div class="client-container">
         <img src="/images/image-patrick.jpg" alt="headshot of patrick">
         <div class="client-detail">
@@ -81,7 +81,7 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card card-5">
       <div class="client-container">
         <img src="/images/image-kira.jpg" alt="headshot of kira">
         <div class="client-detail">
