changed div containers to <a> tags

--- a/lightboxes/index.html
+++ b/lightboxes/index.html
@@ -16,34 +16,35 @@
     <p>Savory</p>
   </header>
 
-  <section>
-    <div class="image-container">
+  <section class="photos">
+    <a href="" class="photo-1">
       <img src="https://images.unsplash.com/photo-1541745537411-b8046dc6d66c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=776&q=80" alt="pepporoni pizza">
-    </div>
-    <div class="image-container">
+    </a>
+    <a href="" class="photo-2">
       <img src="https://images.unsplash.com/photo-1571066811602-716837d681de?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=536&q=80" alt="pizza with olive and egg toppings">
-    </div>
-    <div class="image-container">
+    </a>
+    <a href="" class="photo-3">
       <img src="https://images.unsplash.com/photo-1571997478779-2adcbbe9ab2f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" alt="magherita pizza">
-    </div>
-    <div class="image-container">
+    </a>
+    <a href="" class="photo-4">
       <img src="https://images.unsplash.com/photo-1574126154517-d1e0d89ef734?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="pizza with veggie toppings">
-    </div>
-    <div class="image-container">
+    </a>
+    <a href="" class="photo-5">
       <img src="https://images.unsplash.com/photo-1544982503-9f984c14501a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" alt="Slice of pepporoni pizza">
-    </div>
-    <div class="image-container">
+    </a>
+    <a href="" class="photo-6">
       <img src="https://images.unsplash.com/photo-1593504049359-74330189a345?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=654&q=80" alt="hot cheese pizza">
-    </div>
-    <div class="image-container">
+    </a>
+    <a href="" class="photo-7">
       <img src="https://images.unsplash.com/photo-1601924582970-9238bcb495d9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=776&q=80" alt="pepperoni pizza">
-    </div>
-    <div class="image-container">
+    </a>
+    <a href="" class="photo-8">
       <img src="https://images.unsplash.com/photo-1571407970349-bc81e7e96d47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1450&q=80" alt="pizza with bell pepper toppings">
-    </div>
-    <div class="image-container">
+    </a>
+    <a href="" class="photo-9">
       <img src="https://images.unsplash.com/photo-1599462620592-8e17c48eed70?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="three pizzas">
-    </div>
+    </a>
+
   </section>
 
   <div class="modal">
