updated the modal content img src and alt to be blank

--- a/lightboxes/index.html
+++ b/lightboxes/index.html
@@ -51,7 +51,7 @@
     <div class="modal-background"></div>
     <div class="modal-close">Close</div>
     <div class="modal-content">
-      <img src="https://images.unsplash.com/photo-1599462620592-8e17c48eed70?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="three pizzas">
+      <img src="" alt="" id="modal-img">
     </div>      
   </div>
 
