--- a/coding-bootcamp-testimonials-slider-master/index.html
+++ b/coding-bootcamp-testimonials-slider-master/index.html
@@ -18,23 +18,50 @@
 </head>
 <body>
 
-  “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
+  <section class="slideshow">
 
-  Tanya Sinclair
-  UX Engineer
+    <div class="testimonial-1">
+      <div class="testimonial-container">
+        <h3 class="testimonial">
+          “ I’ve been interested in coding for a while but never taken the jump, until now. 
+          I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
+          excited about the future. ”
+        </h3>
+        <p class="testimonial-user">Tanya Sinclair</p>
+        <p class="testimonial-user-position"> UX Engineer</p>
+      </div>
+      <div class="testimonial-user-img">
+        <img src="/images/image-tanya.jpg" alt="image of tanya">
+      </div>
+    </div>
 
-  “ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”
+    <div class="testimonial-2">
+      <div class="testimonial-container">
+        <h3 class="testimonial">
+          “ If you want to lay the best foundation possible I’d recommend taking this course. 
+          The depth the instructors go into is incredible. I now feel so confident about 
+          starting up as a professional developer. ”
+        </h3>
+        <p class="testimonial-user">John Tarkpor</p>
+        <p class="testimonial-user-position">Junior Front-end Developer</p>
+      </div>
+      <div class="testimonial-user-img">
+        <img src="/images/image-john.jpg" alt="image of john">
+      </div>
+    </div>
 
-  John Tarkpor
-  Junior Front-end Developer
+    <div class="slider-btns">
+      <a href=""><img src="/images/icon-prev.svg" alt="previous button"></a>
+      <a href=""><img src="/images/icon-next.svg" alt="next button"></a>
+    </div>
+
+  </section>
+
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Ricky Nguyen</a>.
   </div>
 </body>
 </html>
