add grid to testimonial

--- a/coding-bootcamp-testimonials-slider-master/index.html
+++ b/coding-bootcamp-testimonials-slider-master/index.html
@@ -27,8 +27,11 @@
           I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
           excited about the future. ”
         </h3>
-        <p class="testimonial-user">Tanya Sinclair</p>
-        <p class="testimonial-user-occupation"> UX Engineer</p>
+        <div class="testimonial-user-container">
+          <p class="testimonial-user-name">Tanya Sinclair</p>
+          <p class="testimonial-user-occupation"> UX Engineer</p>
+
+        </div>
       </div>
       <div class="testimonial-user-img">
         <img src="/images/image-tanya.jpg" alt="image of tanya">
@@ -42,8 +45,11 @@
           The depth the instructors go into is incredible. I now feel so confident about 
           starting up as a professional developer. ”
         </h3>
-        <p class="testimonial-user">John Tarkpor</p>
-        <p class="testimonial-user-occupation">Junior Front-end Developer</p>
+        <div class="testimonial-user-container">
+          <p class="testimonial-user">John Tarkpor</p>
+          <p class="testimonial-user-occupation">Junior Front-end Developer</p>
+
+        </div>
       </div>
       <div class="testimonial-user-img">
         <img src="/images/image-john.jpg" alt="image of john">
