--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="_base.css">
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | Stats preview card component</title>
 
@@ -16,18 +18,47 @@
 </head>
 <body>
 
-  Get insights that help your business grow.
+  <section class="card">
+    <div class="card-content">
+      <div>
+        <h2>Get <span>insights</span> that help your business grow.</h2>
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+          experience, and overall efficiency.
+        </p>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+      </div>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+      <div class="card-stats">
+        <div class="card-stat-company">
+          <h3>10k+</h3>
+          <p>Companies</p>
+        </div>
+
+        <div class="card-stat-templates">
+          <h3>314</h3>
+          <p>Templates</p>
+        </div>
+
+        <div class="card-stat-queries">
+          <h3>12M+</h3>
+          <p>Queries</p>
+        </div>
+
+      </div>
+
+      <div class="card-image">
+        <img src="images/image-header-desktop.jpg" alt="image of tech workers">
+      </div>
+    </div>
+
+  </section>
+
+
+  
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Ricky</a>.
   </div>
 </body>
 </html>
