--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -21,24 +21,24 @@
   <section class="card">
     <div class="card-content">
       
-        <h2>Get <span>insights</span> that help your business grow.</h2>
+        <h3>Get <span>insights</span> that help your business grow.</h3>
         <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
           experience, and overall efficiency.
         </p>
 
         <div class="card-stats">
-          <div class="card-stat-company">
-            <h3>10k+</h3>
+          <div class="card-stat">
+            <h4>10k+</h4>
             <p>Companies</p>
           </div>
   
-          <div class="card-stat-templates">
-            <h3>314</h3>
+          <div class="card-stat">
+            <h4>314</h4>
             <p>Templates</p>
           </div>
   
-          <div class="card-stat-queries">
-            <h3>12M+</h3>
+          <div class="card-stat">
+            <h4>12M+</h4>
             <p>Queries</p>
           </div>
   
@@ -48,6 +48,7 @@
       </div>
 
       <div class="card-image">
+        <div class="overlay"></div>
         <img src="images/image-header-desktop.jpg" alt="image of tech workers">
       </div>
 
