--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="_base.css">
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | Order summary card</title>
 
@@ -16,18 +18,24 @@
 </head>
 <body>
 
-  Order Summary
+  <div class="card">
+    <div class="img">
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+    </div>
 
-  Annual Plan
-  $59.99/year
+    <h3>Order Summary</h3>
+ 
+    <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
-  Change
-
-  Proceed to Payment
-  Cancel Order
+    <div class="subscription">
+      <p><b>Annual Plan</b></p>
+      <p>$59.99/year</p>
+      <a href="">Change</a>
+    </div>
+    <button class="payment">Proceed to Payment</button>
+    <button class="cancel">Cancel Order</button>
+  </div>
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
