add css fonts, colors, margins, space

--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -20,20 +20,29 @@
 
   <div class="card">
     <div class="img">
+      <img src="/order-summary-component-main/images/illustration-hero.svg" alt="">
+    </div>
+
+    <div class="card-content">
+      <h3>Order Summary</h3>
+   
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+  
+      <div class="subscription">
+        <img src="/order-summary-component-main/images/icon-music.svg" alt="">
+
+        <div class="annual-plan">
+          <p><span>Annual Plan</span></p>
+          <p>$59.99/year</p>
+
+        </div>
+        <a href="">Change</a>
+      </div>
+      <button class="payment">Proceed to Payment</button>
+      <button class="cancel">Cancel Order</button>
 
     </div>
 
-    <h3>Order Summary</h3>
- 
-    <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
-
-    <div class="subscription">
-      <p><b>Annual Plan</b></p>
-      <p>$59.99/year</p>
-      <a href="">Change</a>
-    </div>
-    <button class="payment">Proceed to Payment</button>
-    <button class="cancel">Cancel Order</button>
   </div>
   
   
