--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -1,44 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tip calculator app</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="stylesheet" href="_base.css" />
+    <link rel="stylesheet" href="styles.css" />
 
-  Bill
+    <title>Frontend Mentor | Tip calculator app</title>
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>SPLI<br />TTER</h1>
+    </header>
 
-  Number of People
+    <section>
+      <div class="container">
+        <div class="container-card">
+          <div class="container-form">
+            <h3>Bill</h3>
+            <span>$</span>
+            <input type="text" id="bill" /><br />
 
-  Tip Amount
-  / person
+            <h3>Select Tip %</h3>
 
-  Total
-  / person
+            <div class="container-tip">
+              <a href="#" class="btn tip-btn">5%</a>
+              <a href="#" class="btn tip-btn">10%</a>
+              <a href="#" class="btn tip-btn selected">15%</a>
+              <a href="#" class="btn tip-btn">25%</a>
+              <a href="#" class="btn tip-btn">50%</a>
+              <a href="#" class="btn tip-btn">custom</a>
+            </div>
 
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+            <h3>Number of People</h3>
+            <span>&#9865;</span>
+            <input type="text" id="numOfPeople" /><br />
+          </div>
+
+          <div class="container-results">
+            <div class="container-amount">
+              <h3>Tip Amount <span class="person-results">/ person</span></h3>
+              <p class="total">$4.27</p>
+            </div>
+
+            <div class="container-amount">
+              <h3>Total <span class="person-results">/ person</span></h3>
+              <p class="total">$32.79</p>
+            </div>
+
+            <a href="#" id="btn-reset" class="btn">reset</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    Tip Amount / person Total / person Reset
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">"Ricky Nguyen</a>.
+    </div>
+  </body>
 </html>
