added class and placeholder to input icons

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -38,8 +38,8 @@
         <div class="container-card">
           <div class="container-form">
             <h3>Bill</h3>
-            <span>$</span>
-            <input type="text" id="bill" /><br />
+            <span class="input-icon">$</span>
+            <input type="text" id="bill" placeholder="142.55" /><br />
 
             <h3>Select Tip %</h3>
 
@@ -53,8 +53,8 @@
             </div>
 
             <h3>Number of People</h3>
-            <span>&#9865;</span>
-            <input type="text" id="numOfPeople" /><br />
+            <span class="input-icon">&#9865;</span>
+            <input type="text" id="numOfPeople" placeholder="5" /><br />
           </div>
 
           <div class="container-results">
