--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -58,16 +58,21 @@
           </div>
 
           <div class="container-results">
-            <div class="container-amount">
-              <h3>Tip Amount <span class="person-results">/ person</span></h3>
-              <p class="total">$4.27</p>
-            </div>
+            <div>
+              <div class="container-amount">
+                <h3>
+                  Tip Amount <span class="person-results"><br />/ person</span>
+                </h3>
+                <p class="total">$4.27</p>
+              </div>
 
-            <div class="container-amount">
-              <h3>Total <span class="person-results">/ person</span></h3>
-              <p class="total">$32.79</p>
+              <div class="container-amount">
+                <h3>
+                  Total <span class="person-results"><br />/ person</span>
+                </h3>
+                <p class="total">$32.79</p>
+              </div>
             </div>
-
             <a href="#" id="btn-reset" class="btn">reset</a>
           </div>
         </div>
