desktop design complete

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -37,24 +37,29 @@
       <div class="container">
         <div class="container-card">
           <div class="container-form">
-            <h3>Bill</h3>
-            <span class="input-icon">$</span>
-            <input type="text" id="bill" placeholder="142.55" /><br />
+            <div>
+              <h3>Bill</h3>
+              <span class="input-icon">$</span>
+              <input type="text" id="bill" placeholder="142.55" /><br />
+            </div>
+            <div>
+              <h3>Select Tip %</h3>
 
-            <h3>Select Tip %</h3>
-
-            <div class="container-tip">
-              <a href="#" class="btn tip-btn">5%</a>
-              <a href="#" class="btn tip-btn">10%</a>
-              <a href="#" class="btn tip-btn selected">15%</a>
-              <a href="#" class="btn tip-btn">25%</a>
-              <a href="#" class="btn tip-btn">50%</a>
-              <a href="#" class="btn tip-btn">custom</a>
+              <div class="container-tip">
+                <a href="#" class="btn tip-btn">5%</a>
+                <a href="#" class="btn tip-btn">10%</a>
+                <a href="#" class="btn tip-btn selected">15%</a>
+                <a href="#" class="btn tip-btn">25%</a>
+                <a href="#" class="btn tip-btn">50%</a>
+                <a href="#" class="btn tip-btn">custom</a>
+              </div>
             </div>
 
-            <h3>Number of People</h3>
-            <span class="input-icon">&#9865;</span>
-            <input type="text" id="numOfPeople" placeholder="5" /><br />
+            <div>
+              <h3>Number of People</h3>
+              <span class="input-icon">&#9865;</span>
+              <input type="text" id="numOfPeople" placeholder="5" /><br />
+            </div>
           </div>
 
           <div class="container-results">
@@ -79,11 +84,11 @@
       </div>
     </section>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">"Ricky Nguyen</a>.
-    </div>
+    </footer>
   </body>
 </html>
