updated input to number

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -40,7 +40,7 @@
             <div>
               <h3>Bill</h3>
               <span class="input-icon">$</span>
-              <input type="text" id="bill" placeholder="142.55" /><br />
+              <input type="number" id="bill" placeholder="142.55" /><br />
             </div>
             <div>
               <h3>Select Tip %</h3>
@@ -58,7 +58,7 @@
             <div>
               <h3>Number of People</h3>
               <span class="input-icon">&#9865;</span>
-              <input type="text" id="numOfPeople" placeholder="5" /><br />
+              <input type="number" id="numOfPeople" placeholder="5" /><br />
             </div>
           </div>
 
