--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -46,12 +46,14 @@
               <h3>Select Tip %</h3>
 
               <div class="container-tip">
-                <a href="#" class="btn tip-btn">5%</a>
-                <a href="#" class="btn tip-btn">10%</a>
-                <a href="#" class="btn tip-btn selected">15%</a>
-                <a href="#" class="btn tip-btn">25%</a>
-                <a href="#" class="btn tip-btn">50%</a>
-                <a href="#" class="btn tip-btn">custom</a>
+                <a href="#" class="btn tip-btn tip-btn-5" value="5">5%</a>
+                <a href="#" class="btn tip-btn tip-btn-10" value="10">10%</a>
+                <a href="#" class="btn tip-btn tip-btn-15" value="15">15%</a>
+                <a href="#" class="btn tip-btn tip-btn-25" value="25">25%</a>
+                <a href="#" class="btn tip-btn tip-btn-50" value="50">50%</a>
+                <a href="#" class="btn tip-btn tip-btn-custom" value="0"
+                  >custom</a
+                >
               </div>
             </div>
 
@@ -90,5 +92,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">"Ricky Nguyen</a>.
     </footer>
+
+    <script src="index.js"></script>
   </body>
 </html>
