added id to total and tip container

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -70,14 +70,14 @@
                 <h3>
                   Tip Amount <span class="person-results"><br />/ person</span>
                 </h3>
-                <p class="total">$4.27</p>
+                <p id="total-tip" class="total">$4.27</p>
               </div>
 
               <div class="container-amount">
                 <h3>
                   Total <span class="person-results"><br />/ person</span>
                 </h3>
-                <p class="total">$32.79</p>
+                <p id="total-person" class="total">$32.79</p>
               </div>
             </div>
             <a href="#" id="btn-reset" class="btn">reset</a>
