--- a/PriceTableStarter/index.html
+++ b/PriceTableStarter/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700"
     />
+    <link rel="stylesheet" href="_base.css" />
     <link rel="stylesheet" href="app.css" />
   </head>
 
