added html skeleton for rps game

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -9,6 +9,44 @@
     <title>Document</title>
   </head>
   <body>
+    <main>
+      <section>
+        <div id="winner-container" class="container">
+          <div id="winner">
+            <h1>Score will go here</h1>
+          </div>
+        </div>
+        <div id="game-container" class="game-container">
+          <div id="player-container">
+            <div id="player-score"></div>
+            <div id="player-choices">
+              <div>
+                <h2>Pick one</h2>
+              </div>
+              <div id="player-selection">
+                <h2>Player Selection will go here</h2>
+              </div>
+              <div>
+                <a href="#">Rock</a>
+                <a href="#">Paper</a>
+                <a href="#">Scissor</a>
+              </div>
+            </div>
+          </div>
+
+          <div id="computer-container">
+            <div id="computer-choices">
+              <div>
+                <h2>Computer Choice</h2>
+              </div>
+              <div id="computer-selection">
+                <h2>Computer selection will go here</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
