added id's to selections

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -27,9 +27,9 @@
                 <h2>Player Selection will go here</h2>
               </div>
               <div>
-                <a href="#">Rock</a>
-                <a href="#">Paper</a>
-                <a href="#">Scissor</a>
+                <a href="#" id="rock-btn">Rock</a>
+                <a href="#" id="paper-btn">Paper</a>
+                <a href="#" id="scissor-btn">Scissor</a>
               </div>
             </div>
           </div>
