--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div id="game-container" class="game-container">
-          <div id="player-container">
+          <div id="player-container" class="player-container">
             <div id="player-score"></div>
             <div id="player-choices">
               <div>
@@ -34,7 +34,7 @@
             </div>
           </div>
 
-          <div id="computer-container">
+          <div id="computer-container" class="player-container">
             <div id="computer-choices">
               <div>
                 <h2>Computer Choice</h2>
