added data attribute to html and added pseudocode

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -27,9 +27,9 @@
                 <h2>Player Selection will go here</h2>
               </div>
               <div>
-                <a href="#" id="rock-btn">Rock</a>
-                <a href="#" id="paper-btn">Paper</a>
-                <a href="#" id="scissor-btn">Scissor</a>
+                <a href="#" id="rock-btn" data-sel="rock">Rock</a>
+                <a href="#" id="paper-btn" data-sel="paper">Paper</a>
+                <a href="#" id="scissor-btn" data-sel="scissor">Scissor</a>
               </div>
             </div>
           </div>
