created html form

--- a/poke-sprites/index.html
+++ b/poke-sprites/index.html
@@ -10,6 +10,15 @@
   </head>
   <body>
     <h1>Pokemon150</h1>
+    <div class="container">
+      <label for="">Enter a number to display pokemons</label>
+
+      <form action="submit" id="pokeform">
+        <input type="number" placeholder="Enter a number..." />
+        <button id="btn">Enter</button>
+      </form>
+    </div>
+
     <section class="wrapper">
       <div class="container">
         <div id="pokemons" class="pokemon-container"></div>
