hooked form to js and can enter number to render pokemons

--- a/poke-sprites/index.html
+++ b/poke-sprites/index.html
@@ -9,19 +9,18 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Pokemon150</h1>
     <div class="container">
       <label for="">Enter a number to display pokemons</label>
 
       <form action="submit" id="pokeform">
-        <input type="number" placeholder="Enter a number..." />
+        <input type="number" id="form-value" placeholder="Enter a number..." />
         <button id="btn">Enter</button>
       </form>
     </div>
 
     <section class="wrapper">
       <div class="container">
-        <div id="pokemons" class="pokemon-container"></div>
+        <div id="pokemons-container" class="pokemon-container"></div>
       </div>
     </section>
     <script src="index.js"></script>
