got rid of form input after submit

--- a/poke-sprites/index.html
+++ b/poke-sprites/index.html
@@ -10,9 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <label for="">Enter a number to display pokemons</label>
-
       <form action="submit" id="pokeform">
+        <h1 for="">Enter a number to display pokemons</h1>
         <input type="number" id="form-value" placeholder="Enter a number..." />
         <button id="btn">Enter</button>
       </form>
