created fn to render one pokemon

--- a/poke-sprites/index.html
+++ b/poke-sprites/index.html
@@ -12,8 +12,11 @@
     <div class="container">
       <form action="submit" id="pokeform">
         <h1 for="">Enter a number to display pokemons</h1>
-        <input type="number" id="form-value" placeholder="Enter a number..." />
+        <input type="number" id="input-1" placeholder="render all..." />
         <button id="btn">Enter</button>
+        <input type="number" id="input-2" placeholder="render 1..." />
+
+        <button id="btn2">Enter</button>
       </form>
     </div>
 
