render score and computer selection

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -35,6 +35,7 @@
           </div>
 
           <div id="computer-container" class="player-container">
+            <div id="computer-score"></div>
             <div id="computer-choices">
               <div>
                 <h2>Computer Choice</h2>
