--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -14,6 +14,7 @@
         <div id="winner-container" class="container">
           <div id="winner">
             <h1>Score will go here</h1>
+            <a href="#" id="reset-game" data-sel="reset">Reset Game</a>
           </div>
         </div>
         <div id="game-container" class="game-container">
