--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -28,9 +28,9 @@
                 <h2>Player Selection will go here</h2>
               </div>
               <div>
-                <a href="#" id="rock-btn" data-sel="rock">Rock</a>
-                <a href="#" id="paper-btn" data-sel="paper">Paper</a>
-                <a href="#" id="scissor-btn" data-sel="scissor">Scissor</a>
+                <a href="#" id="rock-btn" data-sel="rock">✊</a>
+                <a href="#" id="paper-btn" data-sel="paper">🖐️</a>
+                <a href="#" id="scissor-btn" data-sel="scissor">✌️</a>
               </div>
             </div>
           </div>
