styled left side

--- a/odinform/index.html
+++ b/odinform/index.html
@@ -8,46 +8,51 @@
     <title>Odin Form</title>
   </head>
   <body>
-    <section class="side">
-      <div class="logo">
-        <img src="/odinform/odin-lined.png" alt="" width="100px" />
-        <h1>ODIN</h1>
-      </div>
-    </section>
-
-    <section>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad commodi
-        delectus recusandae perspiciatis quisquam blanditiis eligendi, non,<br /><br />
-        assumenda esse rem iure est veniam minus natus.
-      </p>
-    </section>
-
-    <section class="form">
-      <form action="">
-        <div class="form-container">
-          <h2>Let's do this</h2>
-          <label for="firstname">first name</label>
-          <input type="text" />
-
-          <label for="lastname">last name</label>
-          <input type="text" />
-
-          <label for="email">email</label>
-          <input type="email" />
-
-          <label for="phone">phone number</label>
-          <input type="phone" />
-
-          <label for="password">password</label>
-          <input type="text" />
-
-          <label for="confirm-password">confirm password</label>
-          <input type="password" />
+    <div class="wrapper">
+      <section class="left">
+        <div class="logo">
+          <img src="/odinform/odin-lined.png" alt="" width="100px" />
+          <h1>ODIN</h1>
         </div>
-        <button>Create Account</button>
-        <p>Already have an account? <a href="#">Log in</a></p>
-      </form>
-    </section>
+      </section>
+
+      <div class="right">
+        <section>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad commodi
+            delectus recusandae perspiciatis quisquam blanditiis eligendi,
+            non,<br /><br />
+            assumenda esse rem iure est veniam minus natus.
+          </p>
+        </section>
+
+        <section class="form">
+          <form action="">
+            <div class="form-container">
+              <h2>Let's do this</h2>
+              <label for="firstname">first name</label>
+              <input type="text" />
+
+              <label for="lastname">last name</label>
+              <input type="text" />
+
+              <label for="email">email</label>
+              <input type="email" />
+
+              <label for="phone">phone number</label>
+              <input type="phone" />
+
+              <label for="password">password</label>
+              <input type="text" />
+
+              <label for="confirm-password">confirm password</label>
+              <input type="password" />
+            </div>
+            <button>Create Account</button>
+            <p>Already have an account? <a href="#">Log in</a></p>
+          </form>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
