styled right side content section

--- a/odinform/index.html
+++ b/odinform/index.html
@@ -17,12 +17,12 @@
       </section>
 
       <div class="right">
-        <section>
+        <section class="content">
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad commodi
             delectus recusandae perspiciatis quisquam blanditiis eligendi,
-            non,<br /><br />
-            assumenda esse rem iure est veniam minus natus.
+            non.<br /><br />
+            assumenda <span>esse</span> minus natus.
           </p>
         </section>
 
